Deployments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clients-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clients-api
  template:
    metadata:
      labels:
        app: clients-api
    spec:
      containers:
        - name: clients-api
          image: docker.io/akshaysiv/delta-capita-test:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8085
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 27017
