Deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: delta-capita-test
spec:
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017

---

apiVersion: v1
kind: Service
metadata:
  name: clients-api-service
  namespace: delta-capita-test
spec:
  selector:
    app: clients-api
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085
  type: ClusterIP
